--- a/ctDemoActivityList.css
+++ b/ctDemoActivityList.css
@@ -12,7 +12,7 @@
     float: left !important;
     margin: 0 10px 20px 10px !important;
     border-radius: 8px !important;
-    flex: 1 1 0px;
+    flex: 1 !important;
 }
 #activity-list-v2 ul {
     margin: 0;
