--- a/ctDemoActivityList.css
+++ b/ctDemoActivityList.css
@@ -33,10 +33,12 @@
 }
 #activity-list-v2 .image-container {
     background-color:#ffffff !important;
+    width:150px;
+    height:150px;
 }
 img {
-    height: auto;
-    width: 100%;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
     padding: 0px !important;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
