--- a/ctDemologin.css
+++ b/ctDemologin.css
@@ -17,7 +17,7 @@
 #registration-v2 .container {
     display: inline-table !important;
     width: 100% !important;
-    background-size: 85px 60pxpx !important;
+    background-size: 85px 60px !important;
     background-position-y: bottom !important;
     background-repeat: no-repeat !important;
 }
@@ -33,7 +33,7 @@ element.style {
     padding: 15px !important;
     background-color: rgba(255,255,255,.9) !important;
     height: 48px !important;
-    display: flex !importsnt;
+    display: flex !important;
     justify-content: space-evenly !important;
     align-items: center !important;
     flex: 1 1 0 !important;
@@ -43,6 +43,6 @@ h3 {
     display: none;
 }
 #registration-v2 .container .content .heading {
-    font-size: 1.5625rem !important;
+    font-size: 1.2rem !important;
     padding-bottom: 10px !important;
 }
