--- a/rewardList.css
+++ b/rewardList.css
@@ -7,6 +7,7 @@
     width: 25%;
     float: left;
     border-radius: 20px;
+    background-color: rgb(174, 148, 109);
 }
 #reward-list-v2 .rewards .reward img {
     cursor: pointer;
