--- a/ctDemoInfo.css
+++ b/ctDemoInfo.css
@@ -31,3 +31,17 @@
 .widget .container {
     padding: 30px 10px 0px 10px;
 }
+h1 {
+    animation: 1.5s slide-right;
+}
+@keyframes slide-right {
+  from {
+    margin-left: -100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
