--- a/rewardList.css
+++ b/rewardList.css
@@ -14,3 +14,17 @@
     width: 100%;
     border-radius: 10px;
 }
+h1 {
+    animation: 1.5s slide-right;
+}
+@keyframes slide-right {
+  from {
+    margin-left: -100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
