--- a/ctDemoActivityList.css
+++ b/ctDemoActivityList.css
@@ -1,10 +1,4 @@
-.fade-in-image {
-  animation: fadeIn 5s;
-  -webkit-animation: fadeIn 5s;
-  -moz-animation: fadeIn 5s;
-  -o-animation: fadeIn 5s;
-  -ms-animation: fadeIn 5s;
-}
+
 @keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
@@ -65,11 +59,12 @@ h1 {
     align-content: space-evenly;
     align-items: center;
     height:300px;
-    animation: fadeIn 2s;
-    -webkit-animation: fadeIn 2s;
-    -moz-animation: fadeIn 2s;
-    -o-animation: fadeIn 2s;
-    -ms-animation: fadeIn 2s;
+    animation-delay: 1.5s;
+    animation: fadeIn 1s;
+    -webkit-animation: fadeIn 1s;
+    -moz-animation: fadeIn 1s;
+    -o-animation: fadeIn 1s;
+    -ms-animation: fadeIn 1s;
 }
 #activity-list-v2 ul {
     margin: 0;
