--- a/ctDemoInfo.css
+++ b/ctDemoInfo.css
@@ -53,6 +53,10 @@
     max-height: 154px;
     animation-delay: 2s;
     animation: fadeIn 3s;
+    -webkit-animation: fadeIn 3s;
+    -moz-animation: fadeIn 3s;
+    -o-animation: fadeIn 3s;
+    -ms-animation: fadeIn 3s;
 }
 .widget .container {
     padding: 30px 10px 0px 10px;
