--- a/ctDemoActivityList.css
+++ b/ctDemoActivityList.css
@@ -62,6 +62,7 @@ h1 {
     animation-delay: 10s;
     animation: fadeIn 1s;
     -webkit-animation: fadeIn 1s;
+    -webkit-animation-delay: 10s;
     -moz-animation: fadeIn 1s;
     -o-animation: fadeIn 1s;
     -ms-animation: fadeIn 1s;
