--- a/ctDemoInfo.css
+++ b/ctDemoInfo.css
@@ -54,6 +54,7 @@
     animation-delay: 10s;
     animation: fadeIn 3s;
     -webkit-animation: fadeIn 3s;
+    -webkit-animation-delay: 10s;
     -moz-animation: fadeIn 3s;
     -o-animation: fadeIn 3s;
     -ms-animation: fadeIn 3s;
