--- a/rewardList.css
+++ b/rewardList.css
@@ -26,7 +26,7 @@
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
-    -webkit-animation: fadeIn 3s 10s;
+    -webkit-animation: fadeIn 4s;
 }
 #reward-list-v2 .rewards .reward {
     width: 20%;
