--- a/ctDemoLoginPage.css
+++ b/ctDemoLoginPage.css
@@ -15,3 +15,7 @@
 body {
     background: #000000;
 }
+#registration-v2 .container .content {
+    padding: 20px;
+    background-color: #000000;
+}
