--- a/ctDemoLoginPage.css
+++ b/ctDemoLoginPage.css
@@ -5,6 +5,9 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+h2 h3 {
+    color:#ffffff;
+}
 #registration-v2 .header {
     display: none;
     width: 100%;
