--- a/ctDemoLoginPage.css
+++ b/ctDemoLoginPage.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
 }
 h2, h3 {
-    color:#ffffff !important;
+    color:#ae946d !important;
 }
 #registration-v2 .header {
     display: none;
