--- a/ctDemoLoginPage.css
+++ b/ctDemoLoginPage.css
@@ -26,3 +26,7 @@ body {
     font-size: 2rem;
     padding-bottom: 25px;
 }
+#registration-v2 .description {
+    font-size: 1.5rem;
+    padding-bottom: 25px;
+}
