--- a/ctDemoLoginPage.css
+++ b/ctDemoLoginPage.css
@@ -59,7 +59,8 @@ body {
   cursor: pointer;
   transition: transform 0.1s, box-shadow 0.1s; 
 }
-#registration-v2 .container .content .login button {   
+#registration-v2 .container .content .login button {  
+    font-size: .875rem !important;
     display: inline-block;
     position: relative;
     width: auto;
@@ -83,4 +84,7 @@ body {
     5px 18px 10px hsla(0, 0%, 0%, 0.2); /* drop shadow 2 */
   cursor: pointer;
   transition: transform 0.1s, box-shadow 0.1s;
+}
+span {
+    display: none;
 }
