--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -3,3 +3,7 @@
     display: table;
     height: 320px !important;
 }
+#account-overview-two-v2 {
+    width: 100%;
+    height: 320px !important;
+}
