--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -3,6 +3,9 @@
     display: table;
     height: 320px !important;
 }
+#account-overview-two-v2 .header {
+    display:none;
+}
 #account-overview-two-v2 {
     width: 100%;
     height: 320px !important;
