--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -1,12 +1,12 @@
-#account-overview-two-v2 .container {
+#account-overview-v2 .container {
     width: 100%;
     display: table!important;
     height: 320px !important;
 }
-#account-overview-two-v2 .header {
+#account-overview-v2 .header {
     display:none !important;
 }
-#account-overview-two-v2 {
+#account-overview-v2 {
     width: 100%;
     height: 320px !important;
 }
