--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -1,6 +1,6 @@
 #account-overview-v2 .container {
     width: 100%;
-    display: inline-block!important;
+    display: table!important;
     height: 320px !important;
     overflow: hidden !important;
     background: #000000 !important;
@@ -21,4 +21,10 @@ html {
 element.style {
     max-height: 350px;
     overflow: hidden !important;
+}
+#account-overview-v2 .profile-pic.bp2 {
+    display: none;
+    width: 100px;
+    height: 100px;
+    align-items: baseline;
 }
