--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -28,3 +28,11 @@ element.style {
     height: 100px;
     align-items: baseline;
 }
+#account-overview-v2 .profile-pic.bp1 {
+    display: none;
+    width: 50px;
+    height: 50px;
+}
+.ng-scope.ng-isolate-scope {
+    overflow: hidden !important;
+}
