--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -51,3 +51,21 @@ element.style {
     font-size: 1.75rem;
     margin-bottom: 50px;
 }
+#account-overview-v2 .points {
+    font-size: .6875rem;
+    text-transform: capitalize;
+    margin-bottom: 8px;
+}
+#account-overview-v2 .points {
+    font-size: 2.1rem !important;
+    text-transform: capitalize;
+    margin-bottom: 8px;
+    color: #c7a910 !important;
+    font-style: italic;
+    font-weight: bold;
+    background: linear-gradient(45deg, black, #ddd);
+    border-radius: 10px;
+}
+img {
+    display:none;
+}
