--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -63,9 +63,18 @@ element.style {
     color: #c7a910 !important;
     font-style: italic;
     font-weight: bold;
-    background: linear-gradient(45deg, black, #ddd);
+    background: repeating-linear-gradient(45deg, #ae946d, transparent 366px);
     border-radius: 10px;
 }
 .icon {
     display:none !important; 
+}
+#account-overview-v2 .progress-bar-container {
+    padding-top: 15px;
+    display: block;
+    width: 100%;
+    background: repeating-linear-gradient(45deg, #ae946d, transparent 400px);
+    color: white;
+    border-radius: 10px;
+    margin bottom: 2;
 }
