--- a/aOverview.css
+++ b/aOverview.css
@@ -148,8 +148,14 @@ span.fan-level-progress.ng-scope {
 
 #account-overview-v2 .logout-link-container {
     display: block;
+    padding-top: 60px;
+    width: 100%;
+    text-align: right;
+    font-size: .6875rem;
 }
-
+#account-overview-v2 .logout-link  {
+    color:#ffffff !important;
+}
 .container {
     background-color: #000000;
 }
