--- a/aList.css
+++ b/aList.css
@@ -10,7 +10,7 @@ body {
   max-width: 1222px !important;
   margin-left: auto !important;
   margin-right: auto !important;
-  background-color: #001a30 !important;
+  background-color: #000000 !important;
   font-family: "Bull Text", Helvetica, sans-serif !important;
   position: relative;
     margin-left: auto;
