--- a/rList.css
+++ b/rList.css
@@ -39,7 +39,7 @@ body {
     max-width: 1222px !important;
     margin-left:  auto !important;
     margin-right: auto !important;
-    background-color: #001A30 !important;
+    background-color: #ffffff !important;
     font-family: 'Bull Text',Helvetica,sans-serif !important;   
     /* height: 515px; */
     position: relative;
