--- a/aList.css
+++ b/aList.css
@@ -27,7 +27,7 @@ h1#heading-text {
   padding-bottom: 10px;
 }
 .header.ct-header-color {
-  background-color: #001a30 !important;
+  background-color: rgb(174, 148, 109) !important;
   color: #ffffff !important;
   border-bottom: none !important;
   position: relative;
