--- a/ctDemoPageInfo.css
+++ b/ctDemoPageInfo.css
@@ -22,6 +22,16 @@
   0% {opacity:0;}
   100% {opacity:1;}
 }
+@keyframes slide-right {
+  from {
+    margin-left: -100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 #account-overview-v2 .container {
     width: 100%;
     display: table!important;
