--- a/aOverview.css
+++ b/aOverview.css
@@ -34,6 +34,7 @@ body {
 
 div#account-overview-v2 {
     color: #ffffff !important;
+    width:90% !important;
     /* padding: 0px 0px 80px 0px !important; */
 }
 
