--- a/aOverview.css
+++ b/aOverview.css
@@ -97,7 +97,7 @@ span.ct-progress-bar {
     /* Added by Priyank */
     height: 3.25rem!important;
     border-radius: 25px;
-    background-color: #000000 !important;
+    background-color: #c41b2f !important;
     border: 1px solid #627282ab !important;
 }
 
