--- a/ctDemoActivityList.css
+++ b/ctDemoActivityList.css
@@ -83,7 +83,7 @@ h1 {
     height:150px;
 }
 img {
-    height: 100%;
+    height: 150px !important;
     width: 100%;
     padding: 2px !important;
     border-radius: 8px;
