--- a/aList.css
+++ b/aList.css
@@ -182,7 +182,7 @@ span.ct-link-color.ng-binding {
 }
 #activity-list-v2 .points-container .points_without-bonus {
   font-size: 1rem !important;
-  color: #737477 !important;
+  color: #c41b2f !important;
   font-weight: 400 !important;
   margin-bottom: 5px !important;
 }
