--- a/aOverview.css
+++ b/aOverview.css
@@ -11,7 +11,7 @@ body {
     max-width: 1220px !important;
     margin-left:  auto !important;
     margin-right: auto !important;
-    background-color: #000000 !important;   
+    background-color: transparent !important;   
     font-family: 'Bull Text',Helvetica,sans-serif !important;
     padding-bottom: 60px;/* Added By Dersana */
 }
